# omnia_lighting_app

./: .env.example  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
scripts/: deploy.sh
src/omnia_lighting_app_backend/: Cargo.toml  omnia_lighting_app_backend.did
src/omnia_lighting_app_backend/src/: commands.rs  lib.rs  outcalls.rs  rdf.rs  utils.rs  wot.rs
src/omnia_lighting_app_backend/src/rdf/: connection.rs  uuid.rs
src/omnia_lighting_app_frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
src/omnia_lighting_app_frontend/public/.well-known/: ii-alternative-origins
src/omnia_lighting_app_frontend/src/: App.tsx  index.html  index.js  main.tsx
src/omnia_lighting_app_frontend/src/components/: ChooseColorModal.tsx  Color.tsx  CommandsQueue.tsx  CurrentCommand.tsx  LiveStream.tsx  PrincipalDisplay.tsx
src/omnia_lighting_app_frontend/src/contexts/: AuthContext.tsx  CommandsContext.tsx  DevicesContext.tsx
src/omnia_lighting_app_frontend/src/services/: authClient.ts
src/omnia_lighting_app_frontend/src/utils/: lightColor.ts  timestamp.ts
