[package]
name = "omnia_lighting_app_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ciborium = "0.2.0"
getrandom = { version = "0.2.9", features = ["custom"] }
hex = "0.4.3"
ic-cdk = "0.8.1"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", version = "0.1.0" }
rand = "0.8.5"
rand_chacha = { version = "0.3.1", default-features = false }
serde = "1.0.164"
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4"] }
