[package]
name = "omnia_lighting_app_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ciborium = "0.2.0"
hex = "0.4.3"
ic-cdk = { version = "0.8.1" }
ic-cdk-timers = "0.3.0"
omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", rev = "f2a1fdf5272dc4adf0b4f0a955b6f7219660dfb3" }
serde = "1.0.164"
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4"] }
